<resources>
    <string name="app_name">News App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="publish_date">Publish Date</string>
    <string name="news_title">News Title</string>
    <string name="author">Author</string>
    <string name="latest_news">Latest News</string>
    <string name="breaking_news">Breaking News</string>
    <string name="content">Content</string>
    <string name="world">• World</string>
    <string name="searchbar_hint">Search News</string>
    <string name="international_news">International News</string>
    <string name="sorry_no_results_were_found_for_the_news_title_you_were_looking_for">Sorry, no results were found for the news title you were looking for.</string>
    <string name="archive">Archive</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="archived_news_could_not_be_found">Archived news could not be found!</string>
</resources>