<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="article"
            type="com.app.newsapp.model.Article"/>
    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/author"
                android:textSize="14sp"
                android:text="@{article.author}"/>

            <TextView
                android:id="@+id/newsTitle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:gravity="center|start"
                android:hint="@string/news_title"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@{article.title}"
                android:maxLines="2"
                android:ellipsize="end"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/publishDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/publish_date"
                android:textSize="14sp"
                android:formatDate="@{article.publishedAt}"/>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardCornerRadius="8dp">

            <ImageView
                android:id="@+id/newsImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:downloadImage="@{article.urlToImage}"/>

        </androidx.cardview.widget.CardView>


    </LinearLayout>

</layout>